manifests/auth/oauth2-proxy-ns-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
