manifests/auth/oauth2-proxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-filebrowser
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy-filebrowser
  template:
    metadata:
      labels:
        app: oauth2-proxy-filebrowser
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          ports:
            - containerPort: 4180
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-filebrowser
  namespace: auth
spec:
  selector:
    app: oauth2-proxy-filebrowser
  ports:
    - name: http
      port: 4180
      targetPort: 4180
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-filebrowser-route-to-oauth2-proxy
  namespace: auth
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: filebrowser
  to:
    - group: ""
      kind: Service
      name: oauth2-proxy-filebrowser
